@@ -1,12 +1,13 @@
 package ca.uhn.fhir.jpa.provider.r4;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import ca.uhn.fhir.batch2.api.IJobCoordinator;
 import ca.uhn.fhir.batch2.jobs.export.BulkDataExportProvider;
 import ca.uhn.fhir.batch2.model.JobInstance;
 import ca.uhn.fhir.batch2.model.StatusEnum;
 import ca.uhn.fhir.i18n.Msg;
-import ca.uhn.fhir.interceptor.model.ReadPartitionIdRequestDetails;
-import ca.uhn.fhir.interceptor.model.RequestPartitionId;
 import ca.uhn.fhir.jpa.api.model.BulkExportJobResults;
 import ca.uhn.fhir.jpa.batch.models.Batch2JobStartResponse;
 import ca.uhn.fhir.jpa.bulk.export.model.BulkExportResponseJson;
@@ -14,7 +15,6 @@ import ca.uhn.fhir.jpa.entity.PartitionEntity;
 import ca.uhn.fhir.jpa.model.config.PartitionSettings;
 import ca.uhn.fhir.jpa.model.entity.ResourceTable;
 import ca.uhn.fhir.jpa.model.util.JpaConstants;
-import ca.uhn.fhir.jpa.partition.RequestPartitionHelperSvc;
 import ca.uhn.fhir.rest.api.Constants;
 import ca.uhn.fhir.rest.api.server.RequestDetails;
 import ca.uhn.fhir.rest.api.server.SystemRequestDetails;
@@ -23,50 +23,49 @@ import ca.uhn.fhir.rest.server.RestfulServer;
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
 import ca.uhn.fhir.rest.server.exceptions.MethodNotAllowedException;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
+import ca.uhn.fhir.rest.server.interceptor.auth.SearchNarrowingInterceptor;
+import ca.uhn.fhir.rest.server.provider.ProviderConstants;
 import ca.uhn.fhir.rest.server.servlet.ServletRequestDetails;
 import ca.uhn.fhir.test.utilities.ITestDataBuilder;
 import ca.uhn.fhir.util.JsonUtil;
 import com.google.common.collect.Sets;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.commons.io.IOUtils;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpGet;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
-import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.CapabilityStatement;
 import org.hl7.fhir.r4.model.Condition;
 import org.hl7.fhir.r4.model.IdType;
 import org.hl7.fhir.r4.model.Organization;
 import org.hl7.fhir.r4.model.Patient;
-import org.hl7.fhir.r4.model.StringType;
+import org.hl7.fhir.r4.model.Resource;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Spy;
 import org.springframework.mock.web.MockHttpServletRequest;
 
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.hasSize;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.fail;
+
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.isNotNull;
@@ -103,9 +102,10 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		createPatient(withTenant(TENANT_B), withActiveFalse());
 
 		runInTransaction(() -> {
-			PartitionEntity partition = myPartitionDao.findForName(TENANT_A).orElseThrow(() -> new IllegalStateException());
-			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
-			assertEquals(partition.getId(), resourceTable.getPartitionId().getPartitionId());
+			PartitionEntity partition = myPartitionDao.findForName(TENANT_A).orElseThrow(IllegalStateException::new);
+			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
+            assert resourceTable.getPartitionId() != null;
+            assertEquals(partition.getId(), resourceTable.getPartitionId().getPartitionId());
 		});
 
 		// Now read back
@@ -141,7 +141,7 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		createPatient(withTenant(TENANT_B), withActiveFalse());
 
 		runInTransaction(() -> {
-			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
+			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
 			assertNull(resourceTable.getPartitionId());
 		});
 
@@ -180,16 +180,16 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeIncludeDeleted(
-				"Patient", Arrays.asList(patientId)
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeIncludeDeleted(
+				"Patient", List.of(patientId)
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoType(
-				"Patient", Arrays.asList(patientId), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoType(
+				"Patient", List.of(patientId), true
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
@@ -199,18 +199,18 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeIncludeDeleted(
-				"Patient", Arrays.asList(patientId)
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeIncludeDeleted(
+				"Patient", List.of(patientId)
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoType(
-				"Patient", Arrays.asList(patientId), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoType(
+				"Patient", List.of(patientId), true
 			);
-			assertThat(forcedIds, hasSize(0));
+			assertThat(forcedIds).hasSize(0);
 		});
 	}
 
@@ -222,16 +222,16 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
-				"Patient", Arrays.asList(patientId), false
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
+				"Patient", List.of(patientId), false
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
-				"Patient", Arrays.asList(patientId), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
+				"Patient", List.of(patientId), true
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
@@ -241,16 +241,16 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
-				"Patient", Arrays.asList(patientId), false
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
+				"Patient", List.of(patientId), false
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
-				"Patient", Arrays.asList(patientId), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionNull(
+				"Patient", List.of(patientId), true
 			);
 			assertEquals(0, forcedIds.size());
 		});
@@ -266,16 +266,16 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID), false
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
+				"Patient", List.of(patientId), List.of(TENANT_A_ID), false
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
+				"Patient", List.of(patientId), List.of(TENANT_A_ID), true
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
@@ -284,23 +284,23 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID), false
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
+				"Patient", List.of(patientId), List.of(TENANT_A_ID), false
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartitionIdOrNullPartitionId(
+				"Patient", List.of(patientId), List.of(TENANT_A_ID), true
 			);
 			assertEquals(0, forcedIds.size());
 		});
 	}
 
 	@Test
-	public void testFindAndResolveByForcedIdWithNoTypeInPartition() throws IOException {
+	public void testFindAndResolveByForcedIdWithNoTypeInPartition() {
 		// Create patients
 		String patientId = "AAA";
 		IIdType idA = createPatient(withTenant(TENANT_A), withId(patientId));
@@ -309,16 +309,16 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartition(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), false
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartition(
+				"Patient", List.of(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), false
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartition(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartition(
+				"Patient", List.of(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), true
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
@@ -327,23 +327,23 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 
 		// Search and include deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartition(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), false
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartition(
+				"Patient", List.of(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), false
 			);
 			assertContainsSingleForcedId(forcedIds, patientId);
 		});
 
 		// Search and filter deleted
 		runInTransaction(() -> {
-			Collection<Object[]> forcedIds = myForcedIdDao.findAndResolveByForcedIdWithNoTypeInPartition(
-				"Patient", Arrays.asList(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), true
+			Collection<Object[]> forcedIds = myResourceTableDao.findAndResolveByForcedIdWithNoTypeInPartition(
+				"Patient", List.of(patientId), Arrays.asList(TENANT_A_ID, TENANT_B_ID), true
 			);
 			assertEquals(0, forcedIds.size());
 		});
 	}
 
 	private void assertContainsSingleForcedId(Collection<Object[]> forcedIds, String patientId){
-		assertEquals(1, forcedIds.size());
+		assertThat(forcedIds).hasSize(1);
 		assertEquals(patientId, forcedIds.stream().toList().get(0)[2]);
 	}
 
@@ -361,7 +361,7 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		IIdType idA = createResource("NamingSystem", withTenant(JpaConstants.DEFAULT_PARTITION_NAME), withStatus("draft"));
 
 		runInTransaction(() -> {
-			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
+			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
 			assertNull(resourceTable.getPartitionId());
 		});
 
@@ -378,7 +378,7 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 			myClient.create().resource(patientA).execute();
 			fail();
 		} catch (ResourceNotFoundException e) {
-			assertThat(e.getMessage(), containsString("Partition name \"TENANT-ZZZ\" is not valid"));
+			assertThat(e.getMessage()).contains("Partition name \"TENANT-ZZZ\" is not valid");
 		}
 
 	}
@@ -415,12 +415,63 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		IdType idB = new IdType(response.getEntry().get(1).getResponse().getLocation());
 
 		runInTransaction(() -> {
-			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
-			assertEquals(1, resourceTable.getPartitionId().getPartitionId());
-			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
-			assertEquals(1, resourceTable.getPartitionId().getPartitionId());
+			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
+            assert resourceTable.getPartitionId() != null;
+            assertEquals(1, resourceTable.getPartitionId().getPartitionId());
+			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
+            assert resourceTable.getPartitionId() != null;
+            assertEquals(1, resourceTable.getPartitionId().getPartitionId());
 		});
 
+	}
+
+	@Test
+	public void testTransactionPut_withSearchNarrowingInterceptor_createsPatient() {
+		// setup
+		IBaseResource patientA = buildPatient(withTenant(TENANT_B), withActiveTrue(), withId("1234a"),
+			withFamily("Family"), withGiven("Given"));
+
+		Bundle transactioBundle = new Bundle();
+		transactioBundle.setType(Bundle.BundleType.TRANSACTION);
+		transactioBundle.addEntry()
+			.setFullUrl("http://localhost:8000/TENANT-A/Patient/1234a")
+			.setResource((Resource) patientA)
+			.getRequest().setUrl("Patient/1234a").setMethod(Bundle.HTTPVerb.PUT);
+
+		myServer.registerInterceptor(new SearchNarrowingInterceptor());
+
+		// execute
+		myClient.transaction().withBundle(transactioBundle).execute();
+
+		// verify - read back using DAO
+		SystemRequestDetails requestDetails = new SystemRequestDetails();
+		requestDetails.setTenantId(TENANT_B);
+		Patient patient1 = myPatientDao.read(new IdType("Patient/1234a"), requestDetails);
+		assertEquals("Family", patient1.getName().get(0).getFamily());
+	}
+
+	@ParameterizedTest
+	@ValueSource(strings = {"Patient/1234a", "TENANT-B/Patient/1234a"})
+	public void testTransactionGet_withSearchNarrowingInterceptor_retrievesPatient(String theEntryUrl) {
+		// setup
+		createPatient(withTenant(TENANT_B), withActiveTrue(), withId("1234a"),
+			withFamily("Family"), withGiven("Given"));
+
+		Bundle transactioBundle = new Bundle();
+		transactioBundle.setType(Bundle.BundleType.TRANSACTION);
+		transactioBundle.addEntry()
+			.getRequest().setUrl(theEntryUrl).setMethod(Bundle.HTTPVerb.GET);
+
+		myServer.registerInterceptor(new SearchNarrowingInterceptor());
+
+		// execute
+		Bundle result = myClient.transaction().withBundle(transactioBundle).execute();
+
+		// verify
+		assertThat(result.getEntry()).hasSize(1);
+		Patient retrievedPatient = (Patient) result.getEntry().get(0).getResource();
+		assertNotNull(retrievedPatient);
+		assertEquals("Family", retrievedPatient.getName().get(0).getFamily());
 	}
 
 	@Test
@@ -438,10 +489,11 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		IIdType idB = myPatientDao.create((Patient) patientB, requestDetails).getId();
 
 		runInTransaction(() -> {
-			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
+			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
 			assertNull(resourceTable.getPartitionId());
-			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
-			assertEquals(2, resourceTable.getPartitionId().getPartitionId());
+			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
+            assert resourceTable.getPartitionId() != null;
+            assertEquals(2, resourceTable.getPartitionId().getPartitionId());
 		});
 
 
@@ -501,10 +553,11 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		myPatientDao.update((Patient) patientB, requestDetails);
 
 		runInTransaction(() -> {
-			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
+			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
 			assertNull(resourceTable.getPartitionId());
-			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
-			assertEquals(2, resourceTable.getPartitionId().getPartitionId());
+			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
+            assert resourceTable.getPartitionId() != null;
+            assertEquals(2, resourceTable.getPartitionId().getPartitionId());
 		});
 
 
@@ -564,10 +617,12 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		IdType idB = new IdType(response.getEntry().get(1).getResponse().getLocation());
 
 		runInTransaction(() -> {
-			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
-			assertEquals(1, resourceTable.getPartitionId().getPartitionId());
-			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(() -> new IllegalStateException());
-			assertEquals(1, resourceTable.getPartitionId().getPartitionId());
+			ResourceTable resourceTable = myResourceTableDao.findById(idA.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
+            assert resourceTable.getPartitionId() != null;
+            assertEquals(1, resourceTable.getPartitionId().getPartitionId());
+			resourceTable = myResourceTableDao.findById(idB.getIdPartAsLong()).orElseThrow(IllegalStateException::new);
+            assert resourceTable.getPartitionId() != null;
+            assertEquals(1, resourceTable.getPartitionId().getPartitionId());
 		});
 
 	}
@@ -591,19 +646,19 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 	}
 
 	@Test
-	public void testIncludeInTenantWithAssignedID() throws Exception {
+	public void testIncludeInTenantWithAssignedID() {
 		IIdType idA = createResource("Patient", withTenant(JpaConstants.DEFAULT_PARTITION_NAME), withId("test"), withFamily("Smith"), withActiveTrue());
 		createConditionWithAllowedUnqualified(idA);
 		Bundle response = myClient.search().byUrl(myClient.getServerBase() + "/" + TENANT_A + "/Condition?subject=Patient/" + idA.getIdPart() + "&_include=Condition:subject").returnBundle(Bundle.class).execute();
-		assertThat(response.getEntry(), hasSize(2));
+		assertThat(response.getEntry()).hasSize(2);
 	}
 
 	@Test
-	public void testIncludeInTenantWithAutoGeneratedID() throws Exception {
+	public void testIncludeInTenantWithAutoGeneratedID() {
 		IIdType idA = createResource("Patient", withTenant(JpaConstants.DEFAULT_PARTITION_NAME), withFamily("Smith"), withActiveTrue());
 		createConditionWithAllowedUnqualified(idA);
 		Bundle response = myClient.search().byUrl(myClient.getServerBase() + "/" + TENANT_A + "/Condition?subject=Patient/" + idA.getIdPart() + "&_include=Condition:subject").returnBundle(Bundle.class).execute();
-		assertThat(response.getEntry(), hasSize(2));
+		assertThat(response.getEntry()).hasSize(2);
 	}
 
 	private void createConditionWithAllowedUnqualified(IIdType idA) {
@@ -623,24 +678,7 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		@Mock
 		private IJobCoordinator myJobCoordinator;
 
-		@Spy
-		private RequestPartitionHelperSvc myRequestPartitionHelperSvc = new MultitenantServerR4Test.PartitionTesting.MyRequestPartitionHelperSvc();
-
 		String myTenantName = null;
-
-		private class MyRequestPartitionHelperSvc extends RequestPartitionHelperSvc {
-
-			@Override
-			public RequestPartitionId determineReadPartitionForRequest(RequestDetails theRequest, ReadPartitionIdRequestDetails theDetails) {
-				return RequestPartitionId.fromPartitionName(myTenantName);
-			}
-
-			@Override
-			public void validateHasPartitionPermissions(RequestDetails theRequest, String theResourceType, RequestPartitionId theRequestPartitionId) {
-				return;
-			}
-
-		}
 
 		@Test
 		public void testBulkExportForDifferentPartitions() throws IOException {
@@ -690,20 +728,13 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 			when(servletRequestDetails.getServletResponse())
 				.thenReturn(mockResponse);
 
-			List<IPrimitiveType<String>> filters = new ArrayList<>();
-			if (options.getFilters() != null) {
-				for (String v : options.getFilters()) {
-					filters.add(new StringType(v));
-				}
-			}
-
 			//perform export-poll-status
 			myTenantName = createInPartition;
 			HttpGet get = new HttpGet(buildExportUrl(createInPartition, jobId));
 			try (CloseableHttpResponse response = ourHttpClient.execute(get)) {
 				String responseString = IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8);
 				BulkExportResponseJson responseJson = JsonUtil.deserialize(responseString, BulkExportResponseJson.class);
-				assertThat(responseJson.getOutput().get(0).getUrl(), containsString(createInPartition + "/Binary/"));
+				assertThat(responseJson.getOutput().get(0).getUrl()).contains(createInPartition + "/Binary/");
 			}
 		}
 
@@ -713,7 +744,7 @@ public class MultitenantServerR4Test extends BaseMultitenantResourceProviderR4Te
 		}
 
 		private String buildExportUrl(String createInPartition, String jobId) {
-			return myClient.getServerBase() + "/" + createInPartition + "/" + JpaConstants.OPERATION_EXPORT_POLL_STATUS + "?"
+			return myClient.getServerBase() + "/" + createInPartition + "/" + ProviderConstants.OPERATION_EXPORT_POLL_STATUS + "?"
 				+ JpaConstants.PARAM_EXPORT_POLL_STATUS_JOB_ID + "=" + jobId;
 		}
 	}
